--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd
+http://xmlns.jcp.org/xml/ns/javaee "
          version="3.1">
     <servlet>
         <servlet-name>JobServlet</servlet-name>
-        <servlet-class>sc.ofsc.forward</servlet-class>
+        <servlet-class>main.java.sc.ofsc.com.oracle.toa.forward</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>JobServlet</servlet-name>
