--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <version>4.5.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
