--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
         </dependency>
 
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>it.svario.xpathapi</groupId>
             <artifactId>xpathapi-jaxp</artifactId>
             <version>0.4</version>
